Upgrade to jdk/jextract 22